extra info in hud

--- a/sun/game-data/players/load_screen_player.yml
+++ b/sun/game-data/players/load_screen_player.yml
@@ -9,6 +9,7 @@ player:
   stats:
     health: 1000
     max_health: 1000
+    accuracy: 250
   position: [ 320, 240 ]
   menu_action_delay: 12
   weapon_yaml: game-data/equipment/gun.yml
