--- a/sun/test-data/collision_response/collision_response.yml
+++ b/sun/test-data/collision_response/collision_response.yml
@@ -12,7 +12,7 @@ collision_response:
     "LineOfSightQuery": [ block_line_of_sight2 ]
   "Enemy":
     "Enemy": [ ]
-    "VectorFollower": [ damaging1, removing2, temporary_message1 ]
+    "VectorFollower": [damaging_showing_and_removing1, temporary_message1 ]
     "LineSegment": [ blocking1 ]
     "MouseCollisionWrapper": [ mouse_pick1 ]
     "Weapon": [ damaging1 ]
@@ -26,7 +26,7 @@ collision_response:
   "Player":
     "PickupItem": [ take_inventory2]
     "LineSegment": [ blocking1 ]
-    "VectorFollower": []
+    "VectorFollower": [ damaging_showing_and_removing1 ]
     "Enemy": [ damaging1, damaging2, blocking1 ]
     "EventEmitter": [ trigger_event2 ]
     "MouseCollisionWrapper": [ mouse_pick1 ]
