--- a/sun/test-data/demo_inventory.yml
+++ b/sun/test-data/demo_inventory.yml
@@ -16,4 +16,5 @@ game:
   player_damage_mask: "test-data/sprites/player_damage.png"
   game_over_level: "test-data/levels/game_over/game_over.yml"
   player_bullet: "test-data/equipment/bullet.png"
+  player_reset: "test-data/players/player.yml"
   inventory: "test-data/equipment/all_equip.yml"
