--- a/sun/test-data/new_game_with_swung.yml
+++ b/sun/test-data/new_game_with_swung.yml
@@ -15,4 +15,5 @@ game:
   menu_for_main: "test-data/menus/main.yml"
   player_damage_mask: "test-data/sprites/player_damage.png"
   game_over_level: "test-data/levels/game_over/game_over.yml"
+  player_reset: "test-data/players/player.yml"
   player_bullet: "test-data/equipment/bullet.png"
