--- a/sun/game-data/players/player.yml
+++ b/sun/game-data/players/player.yml
@@ -1,9 +1,13 @@
 player:
-  image_path: game-data/sprites/avatar.bmp
-  position: [ 100, 100 ]
-  movement_distance: 2
+  image_path: game-data/sprites/player_white_circle.png
+  animation_width: 30
+  animation_height: 30
+  animation_rate: 5
+  menu_action_delay: 2
+  movement_distance: 5
   turn_speed: 5
-  health: 500
-  max_health: 1000
-  weapon_yaml: game-data/equipment/gun.yml
-  menu_action_delay: 12
+  stats:
+    health: 100
+    max_health: 100
+    accuracy: 250
+  position: [ 100, 100 ]
