--- a/sun/game-data/enemies/white_square.yml
+++ b/sun/game-data/enemies/white_square.yml
@@ -6,3 +6,21 @@ enemy:
   position: [ 100 , 100 ]
   health: 5
   velocity: 2
+  artificial_intelligence:
+    strategy:
+      start_state: wait
+      states:
+        - wait:
+          - enemy_sighted: chase
+            enemy_too_far: wait
+            enemy_lost: wait
+        - chase:
+          - enemy_in_range: attack
+          - enemy_lost: wait
+          - enemy_too_far: chase
+          - enemy_sighted: chase
+        - attack:
+          - enemy_too_far: chase
+          - enemy_lost: wait
+          - enemy_sighted: attack
+          - enemy_in_range: attack
