cleaned up menus a bit, completed equipment menu, fixed temp message handling in empty hud configs

--- a/sun/game-data/hud/hud_config_empty.yml
+++ b/sun/game-data/hud/hud_config_empty.yml
@@ -5,3 +5,4 @@ heads_up_display:
   menu_scale: 2
   lines:
     - "Player HP: {{player.health}}/{{player.max_health}}"
+    - "{{temporary_message}}"
