--- a/sun/game-data/loads/1/player.yml
+++ b/sun/game-data/loads/1/player.yml
@@ -2,9 +2,9 @@
 player:
   step_size: 1
   position:
-  - 229
-  - 160
-  direction: 312
+  - 121
+  - 177
+  direction: 56
   turn_speed: 8
   movement_distance: 5
   menu_action_delay: 12
@@ -20,10 +20,12 @@ player:
   animation_name: main_player_anim
   footsteps_effect_name: footsteps
   damage_sound_effect_name: 
+  max_energy_points: 1000
+  energy_points: 1000
   stats:
     strength: 10
     defense: 5
-    health: 974
+    health: 996
     max_health: 1000
     speed: 5
-    accuracy: 5
+    accuracy: 250
