--- a/sun/game-data/loads/2/player.yml
+++ b/sun/game-data/loads/2/player.yml
@@ -2,28 +2,34 @@
 player:
   step_size: 1
   position:
-  - 221
-  - 159
-  direction: 336
-  turn_speed: 8
+  - 211
+  - 151
+  direction: 305
+  turn_speed: 5
   movement_distance: 5
-  menu_action_delay: 12
-  enemies_killed: 16
-  image_path: game-data/sprites/anima_gold_avatar_smaller.png
+  menu_action_delay: 2
+  enemies_killed: 3
+  image_path: &29666328
+    animation_file: game-data/sprites/enemy1.png
+    animation_width: 50
+    animation_height: 50
+    animation_rate: 5
   collision_priority: 4
   base_accuracy: 100
-  animation_width: 32
-  animation_height: 16
-  image_file: 
-  animation_path: game-data/sprites/anima_gold_avatar_smaller.png
+  animation_width: 30
+  animation_height: 30
+  image_file: *29666328
+  animation_path: game-data/sprites/player_white_circle.png
   main_animation_name: main_player_anim
   animation_name: main_player_anim
   footsteps_effect_name: footsteps
   damage_sound_effect_name: 
+  max_energy_points: 1000
+  energy_points: 782
   stats:
     strength: 10
     defense: 5
-    health: 1000
-    max_health: 1000
+    health: 46
+    max_health: 100
     speed: 5
-    accuracy: 5
+    accuracy: 250
