moved the position of weapon in equipment lvl.

--- a/sun/game-data/loads/2/player.yml
+++ b/sun/game-data/loads/2/player.yml
@@ -2,34 +2,31 @@
 player:
   step_size: 1
   position:
-  - 211
+  - 192
   - 151
-  direction: 305
+  direction: 10
   turn_speed: 5
   movement_distance: 5
   menu_action_delay: 2
-  enemies_killed: 3
-  image_path: &29666328
-    animation_file: game-data/sprites/enemy1.png
-    animation_width: 50
-    animation_height: 50
-    animation_rate: 5
+  enemies_killed: 2
+  image_path: game-data/sprites/enemy1.png
   collision_priority: 4
   base_accuracy: 100
   animation_width: 30
   animation_height: 30
-  image_file: *29666328
+  image_file: game-data/sprites/enemy1.png
   animation_path: game-data/sprites/player_white_circle.png
   main_animation_name: main_player_anim
   animation_name: main_player_anim
   footsteps_effect_name: footsteps
   damage_sound_effect_name: 
   max_energy_points: 1000
-  energy_points: 782
+  energy_points: 1000
+  radius: 25.0
   stats:
     strength: 10
     defense: 5
-    health: 46
+    health: 64
     max_health: 100
     speed: 5
     accuracy: 250
