more build artifact changes

--- a/sun/Rakefile
+++ b/sun/Rakefile
@@ -5,7 +5,7 @@ require 'hoe'
 require 'rake/testtask'
 HOE = Hoe.spec 'haligonia' do
   developer('Ben Goodspeed', 'b.goodspeed@gmail.com')
-  self.version   = '0.7.5'
+  self.version   = '0.7.8'
   self.readme_file   = 'README.rdoc'
   self.history_file  = 'CHANGELOG.rdoc'
   self.extra_rdoc_files  = FileList['*.rdoc']
@@ -68,6 +68,7 @@ multitask :test_parallel => ["gosu_specs", "non_gosu_specs"]
 
 task "build_artifact" do |t|
   target_dir = "/home/bg/builds"
+  rubyenc = "/home/bg/Downloads/rubyencoder-1.3-eval/bin/rubyencoder"
   version = HOE.version
   name = "Haligonia"
   filename = "#{name}-#{version}"
@@ -79,10 +80,10 @@ task "build_artifact" do |t|
   `cp -r lib #{path}`
   `cp -r patches #{path}`
   `cp -r rgloader #{path}`
-  `cp main.rb #{path}`
+  `cp main.rb distribute.rb haligonia.iss #{path}`
   puts "TODO: Encoding"
-  `cd #{path}; rubyencoder lib/ lib/**/* main.rb --ruby 1.9.2`
-  `cd #{path}; find '*.bak' | xargs rm `
+  `cd #{path}; #{rubyenc} lib/ lib/**/* main.rb --ruby 1.9.2`
+  `cd #{path}; find #{path} -iname '*.bak' | xargs rm `
   puts "TODO: Licence gen"
   puts "Zipping"
   `cd #{target_dir} ; zip -r #{filename}.zip #{filename}`
