--- a/sun/test-data/savearea/4/player.yml
+++ b/sun/test-data/savearea/4/player.yml
@@ -2,34 +2,34 @@
 player:
   step_size: 1
   position:
-  - 320
-  - 240
+  - 36
+  - 36
   direction: 0
-  turn_speed: 5
-  movement_distance: 2
-  menu_action_delay: 12
+  turn_speed: 90
+  movement_distance: 1
+  menu_action_delay: 4
   enemies_killed: 0
-  image_path: test-data/sprites/anima_gold_avatar_smaller.png
+  image_path: test-data/sprites/avatar.bmp
   collision_priority: 4
   base_accuracy: 100
-  animation_width: 32
-  animation_height: 16
+  animation_width: 30
+  animation_height: 30
   image_file: !!null 
-  animation_path: test-data/sprites/anima_gold_avatar_smaller.png
+  animation_path: test-data/sprites/avatar.bmp
   main_animation_name: main_player_anim
   animation_name: main_player_anim
   footsteps_effect_name: footsteps
   damage_sound_effect_name: !!null 
   max_energy_points: 1000
   energy_points: 0
-  radius: 64.0
+  radius: 36.0
   stats:
     strength: 10
     defense: 5
-    health: 1000
-    max_health: 1000
+    health: 5
+    max_health: 6
     speed: 5
     accuracy: 5
   progression:
     upgrade_points: 0
-    level_background_rank: 0
+    level_background_rank: 69
