oops, missing config item

--- a/sun/test-data/collision_response/collision_response.yml
+++ b/sun/test-data/collision_response/collision_response.yml
@@ -16,6 +16,7 @@ collision_response:
     "LineSegment": [ blocking1 ]
     "MouseCollisionWrapper": [ mouse_pick1 ]
     "Weapon": [ damaging1 ]
+    "LineOfSightQuery": []
   "VectorFollower":
     "Player": []
     "Enemy": [ damaging2, removing1 ]
