updated hud to tmp msg only for game over lvl and load lvl. Edited Big horn monster to speed 1.

--- a/sun/game-data/enemies/horned_pig_anim.yml
+++ b/sun/game-data/enemies/horned_pig_anim.yml
@@ -6,9 +6,9 @@ enemy:
   animation_rate: 8
   position: [ 1800 , 1100 ]
   base_direction: 90
-  velocity: 0.5
   stats:
     health: 900
     max_health: 900
     defense: 15
     strength: 15
+    speed: 0.5
