made enemies non-blocking

--- a/sun/game-data/collision_response/collision_response.yml
+++ b/sun/game-data/collision_response/collision_response.yml
@@ -27,7 +27,7 @@ collision_response:
     "PickupItem": [ take_inventory2]
     "LineSegment": [ blocking1 ]
     "VectorFollower": [ damaging_showing_and_removing1 ]
-    "Enemy": [ damaging1, damaging2, blocking1, show_damage1, show_damage2, blocking2 ]
+    "Enemy": [ damaging1, damaging2, show_damage1, show_damage2 ]
     "EventEmitter": [ trigger_event2 ]
     "EventArea": [ show_info_window2 ]
     "MouseCollisionWrapper": [ mouse_pick1 ]
