Ruby Mine acting weird with git and not updating files. Recommiting so it catches the changes in lvl 1 reward to go to map lvl and not straight to the fields hub lvl.

--- a/sun/game-data/levels/h_level_1_reward/h_level_1_reward.yml
+++ b/sun/game-data/levels/h_level_1_reward/h_level_1_reward.yml
@@ -60,6 +60,6 @@ event_areas:
     action_argument: "game-data/levels/map/haligonia.yml"
     info_window:
       description:
-        - See the world!
+        - See the bigger picture!
       position: [ 498, 355 ]
       size: [ 195, 398 ]
