--- a/sun/game-data/levels/the_fields_hub/the_fields_hub.yml
+++ b/sun/game-data/levels/the_fields_hub/the_fields_hub.yml
@@ -26,28 +26,16 @@ line_segments:
     end_y: 600
 
 event_areas:
-  - top_left: [ 528, 420 ]
-    bottom_right: [ 667, 466 ]
-    action: LOAD_LEVEL
-    action_argument: "game-data/levels/h_level_2/h_level_2.yml"
-    info_window:
-      description:
-        - To the next adventure.
-      position: [ 498, 355 ]
-      size: [ 195, 398 ]
-
   - top_left: [ 70, 90 ]
     bottom_right: [ 120, 135 ]
-    action: noop
-    one_time: true
+    action: LOAD_LEVEL
+    action_argument: "game-data/levels/h_level_2/h_level_2.yml"
+    one_time: false
     image_file: game-data/icons/h_red_icon.png
     extra_actions:
-      - action: give_upgrade_points
-        action_argument: 70
-      - action: give_upgrade_points
-        action_argument: 7
+      - action: noop
     info_window:
       description:
-        - foo ba
+        - Go to next level.
       position: [ 498, 355 ]
       size: [ 195, 398 ]
