--- a/sun/game-data/levels/the_fields_hub/the_fields_hub.yml
+++ b/sun/game-data/levels/the_fields_hub/the_fields_hub.yml
@@ -1,4 +1,4 @@
-name: reward
+name: the_fields_hub
 background_image: game-data/levels/the_fields_hub/the_fields_hub.png
 background_music: game-data/music/silence.wav
 heads_up_display: game-data/hud/hud_temp_msg_only.yml
