--- a/sun/game-data/levels/the_fields_hub/the_fields_hub.yml
+++ b/sun/game-data/levels/the_fields_hub/the_fields_hub.yml
@@ -44,7 +44,7 @@ event_areas:
     bottom_right: [ 120, 198 ]
     conditions:
       - condition_name: is_level_complete
-        condition_argument: h_level_2.yml
+        condition_argument: h_level_2
     action: LOAD_LEVEL
     action_argument: "game-data/levels/h_level_3/h_level_3.yml"
     one_time: false
