--- a/sun/test-data/collision_response/collision_response.yml
+++ b/sun/test-data/collision_response/collision_response.yml
@@ -2,9 +2,9 @@ collision_response:
   "EventEmitter":
     "Player": [ trigger_event1 ]
   "PushableElement":
-    "Player": [ push1_or_block_both ]
-    "LineSegment": [ block_player_push1 ]
-    "PushableElement": [ block_player_push1 ]
+    "Player": [ push_element1 ]
+    "LineSegment": [ fizzle_element1 ]
+    "PushableElement": [ fizzle_element1, fizzle_element2 ]
   "Weapon":
     "LineSegment": []
     "EventArea": []
