--- a/sun/test-data/collision_response/collision_response.yml
+++ b/sun/test-data/collision_response/collision_response.yml
@@ -5,6 +5,9 @@ collision_response:
     "Player": [ push_element1 ]
     "LineSegment": [ fizzle_element1 ]
     "PushableElement": [ fizzle_element1, fizzle_element2 ]
+    "PushTarget": [ seated_element1, satisfying_target2 ]
+  "PushTarget":
+    "Player": []
   "Weapon":
     "LineSegment": []
     "EventArea": []
