added in 1 avatar upgrade for now to show that it can be done to player.

--- a/sun/game-data/levels/h_level_3_reward/h_level_3_reward.yml
+++ b/sun/game-data/levels/h_level_3_reward/h_level_3_reward.yml
@@ -26,10 +26,11 @@ line_segments:
 event_areas:
   - top_left: [ 132, 421 ]
     bottom_right: [ 272, 467 ]
-    action: take_reward
+    action: upgrade_player
+    action_argument: "game-data/sprites/player_grey_scale_circle.png"
     info_window:
       description:
-        - Install upgrade.
+        - Avatar upgrade.
       position: [ 103, 355 ]
       size: [ 195, 398 ]
 
