--- a/sun/game-data/levels/h_level_3/h_level_3.yml
+++ b/sun/game-data/levels/h_level_3/h_level_3.yml
@@ -1,6 +1,6 @@
 name: h_level_3
 background_image: game-data/levels/h_level_3/h_level_3.png
-background_music: game-data/music/drumbeats.wav
+background_music: game-data/music/silence.wav
 heads_up_display: game-data/hud/hud_config.yml
 wayfinding: game-data/levels/h_level_3/wayfinding.yml
 reward_level: game-data/levels/h_level_3_reward/h_level_3_reward.yml
