--- a/sun/game-data/levels/h_level_2_reward/h_level_2_reward.yml
+++ b/sun/game-data/levels/h_level_2_reward/h_level_2_reward.yml
@@ -27,10 +27,10 @@ line_segments:
 event_areas:
   - top_left: [ 132, 421 ]
     bottom_right: [ 272, 467 ]
-    action: take_reward
+    action_argument: "game-data/sprites/player_grey_scale_circle.png"
     info_window:
       description:
-        - Install upgrade.
+        - Avatar upgrade.
       position: [ 103, 355 ]
       size: [ 195, 398 ]
 
