--- a/sun/game-data/levels/h_level_3_reward/h_level_3_reward.yml
+++ b/sun/game-data/levels/h_level_3_reward/h_level_3_reward.yml
@@ -27,10 +27,10 @@ event_areas:
   - top_left: [ 132, 421 ]
     bottom_right: [ 272, 467 ]
     action: upgrade_player
-    action_argument: "game-data/sprites/player_grey_scale_circle.png"
+    action: noop #take_reward
     info_window:
       description:
-        - Avatar upgrade.
+        - New Weapon.
       position: [ 103, 355 ]
       size: [ 195, 398 ]
 
