--- a/sun/game-data/levels/h_level_2_reward/h_level_2_reward.yml
+++ b/sun/game-data/levels/h_level_2_reward/h_level_2_reward.yml
@@ -27,6 +27,7 @@ line_segments:
 event_areas:
   - top_left: [ 132, 421 ]
     bottom_right: [ 272, 467 ]
+    action: upgrade_player
     action_argument: "game-data/sprites/player_grey_scale_circle.png"
     info_window:
       description:
